--- a/12-Todo-App-with-API/style.css
+++ b/12-Todo-App-with-API/style.css
@@ -1,181 +1,186 @@
 *,
-*::before,
-*::after {
+*:before,
+*:after {
   box-sizing: border-box;
+}
+
+html,
+body {
+  min-height: 100%;
 }
 
 html {
-  font-family: helvetica;
+  font-size: 20px;
+  font-family: sans-serif;
+
+  --dark-blue: #073b4c;
+  --light-blue: #118ab2;
+  --green: #06d6a0;
+  --yellow: #f5ab00;
+  --pink: #ef476f;
+}
+
+h1,
+h2 {
+  margin: 0;
 }
 
 body {
-  background-color: #008b8b;
-  min-height: 70vh;
-  padding: 1rem;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0;
+  background-color: #f5f5f5;
+}
+
+.done {
+  text-decoration: line-through;
+}
+
+.header {
   text-align: center;
-  font-size: 130%;
-}
-
-@media only screen and (min-width: 500px) {
-  body {
-    min-height: 100vh;
-  }
-}
-
-.container {
-  width: 100%;
-  height: auto;
-  min-height: 1000px;
-  max-width: 500px;
-  min-width: 250px;
-  background: #f1f5f8;
-  background-image: radial-gradient(#bfc0c1 7.2%, transparent 0);
-  background-size: 25px 25px;
-  border-radius: 20px;
-  box-shadow: 4px 3px 7px 2px #00000040;
-  padding: 1rem;
-  box-sizing: border-box;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto;
-  gap: 20px;
-  justify-content: center;
-  align-items: start;
-}
-
-#item1 {
-  margin-bottom: 20px;
-}
-
-#heading {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-color: var(--pink);
+  padding: 3rem 1rem;
+  color: white;
   margin-bottom: 1rem;
 }
 
-.heading-title {
-  transform: rotate(2deg);
-  padding: 0.2rem 1.2rem;
-  border-radius: 20% 5% 20% 5%/5% 20% 25% 20%;
-  background-color: #ffd700;
-  font-size: 1.5rem;
+.header__title {
+  margin: 0;
+  text-shadow: 2px 2px var(--light-blue), 4px 4px var(--yellow);
 }
 
-@media only screen and (min-width: 500px) {
-  .heading-title {
-    font-size: 2rem;
-  }
-}
-.heading-img {
-  width: 24%;
-}
-
-#form-label {
+.button {
+  all: unset;
   display: block;
-  margin-bottom: 0.5rem;
+  word-break: keep-all;
+  word-wrap: normal;
+  color: white;
+  background-color: var(--light-blue);
+  padding: 0.25em 0.4em;
+  border-radius: 0.3em;
+  border: 0.1em solid transparent;
+  box-shadow: 3px 3px 0px var(--pink);
 }
 
-.form-input {
-  box-sizing: border-box;
-  background-color: transparent;
-  padding: 0.7rem;
-  border-bottom-right-radius: 15px 3px;
-  border-bottom-left-radius: 3px 15px;
-  border: solid 3px transparent;
-  border-bottom: dashed 3px #008b8b;
-  font-size: 1rem;
-  color: rgba(63, 62, 65, 0.7);
-  width: 70%;
-  margin-bottom: 20px;
-}
-.form-input:focus {
-  outline: none;
-  border: solid 3px #008b8b;
+.button:focus {
+  border: 0.1em solid var(--yellow);
 }
 
-@media only screen and (min-width: 500px) {
-  .form-input {
-    width: 60%;
-  }
+.button:active {
+  box-shadow: none;
 }
-#btn-add-todo {
-  padding: 0;
-  border: none;
-  transform: rotate(4deg);
-  transform-origin: center;
-  text-decoration: none;
-  padding-bottom: 3px;
-  border-radius: 5px;
-  box-shadow: 0 2px 0 #494a4b;
-  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
-  background-color: #ffd700;
+.main {
+  padding: 1rem;
+  max-width: 35ch;
+  margin: 0 auto;
 }
 
-#btn-delete-todo {
-  padding: 0;
-  border: none;
-  transform: rotate(4deg);
-  transform-origin: center;
-  text-decoration: none;
-  padding-bottom: 3px;
-  border-radius: 5px;
-  box-shadow: 0 2px 0 #494a4b;
-  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
-  background-color: #ffd700;
+.main > * + * {
+  margin-top: 3rem;
 }
 
-#btn-add-todo:active,
-#btn-add-todo:focus,
-#btn-delete-todo:active,
-#btn-delete-todo:focus {
-  transform: translateY(4px);
-  padding-bottom: 0px;
-  outline: 0;
+.radio-button {
+  all: unset;
+  display: inline-block;
+  flex-grow: 1;
+  width: auto;
+  background-color: white;
+  padding: 0.5em;
+  border: 0.1em solid var(--dark-blue);
+  border-radius: 50%;
 }
 
-/* #todo-content {
-  list-style-image: none;
-} */
-
-#todos-list {
-  display: grid;
-  text-align: left;
-  list-style: none;
-}
-/* #todo-list ul {
-  position: relative;
-  padding: 0.5rem;
-} */
-#todos-list ul:hover {
-  text-decoration: line-through wavy #24bffb;
+.radio-button:checked {
+  background-color: var(--light-blue);
 }
 
-.container {
+.radio-button:focus {
+  border: 0.1em solid var(--yellow);
+}
+
+.todo-input {
   display: flex;
-  flex-direction: column;
+}
+
+.todo-input .todo-input__input {
+  margin-right: 1em;
+}
+
+.todo-input__input {
+  all: unset;
+  display: inline-block;
+  flex-grow: 1;
+  width: auto;
+  background-color: white;
+  padding: 0.5em;
+  border: 0.1em solid transparent;
+  border-radius: 0.3em;
+}
+
+.todo-input__input:focus {
+  border: 0.1em solid var(--yellow);
+}
+
+.filter-and-options {
+}
+
+.filter-and-options > * + * {
+  margin-top: 1rem;
+}
+
+.radio-container {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 0.5em 0.25em;
   align-items: center;
-  justify-content: start;
-  height: 100vh;
+  justify-content: center;
 }
 
-#item1,
-#item2,
-#item3 {
-  padding: 20px;
-  margin: 10px;
+.todo-list {
+  list-style-type: none;
+  padding: 0;
 }
 
-/* #todos-list {
-  list-style: none;
-  text-align: left;
-} */
+.todo-list > * + * {
+  margin-top: 0.5rem;
+}
+
+.todo-item {
+  background-color: white;
+  padding: 0.5em 1em;
+  border-radius: 0.3em;
+  display: flex;
+  align-items: center;
+  border: 0.1em solid transparent;
+}
+
+.todo-item:focus-within {
+  box-shadow: 3px 3px 0 var(--pink);
+  border: 0.1em solid var(--yellow);
+}
+
+.todo-item > .todo-item__checkbox {
+  margin-right: 1em;
+}
+
+.todo-item__checkbox {
+  all: unset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.1em;
+  width: 0.75em;
+  height: 0.75em;
+  border: 0.1em solid var(--dark-blue);
+  background-color: white;
+  background-size: 80% 80%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.todo-item__checkbox:checked {
+  background-color: var(--green);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' aria-hidden='true' focusable='false' %3E%3Cpath fill='none' stroke='white' stroke-width='3' d='M1.73 12.91l6.37 6.37L22.79 4.59' /%3E%3C/svg%3E");
+}
+
+.todo-item__text {
+  flex-grow: 1;
+}
